contrast fix

--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@
   padding: 10px 25px;
   border-radius: 5px;
   background: #ff715b;
-  color: #f1f1f1;
+  color: #12141D;
   transition: all 0.1s;
 }
 .btn-card:hover {
